--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,14 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css');
+
+/*header*/
+.link-buttons {
+	justify-content: flex-end;
+	display: flex;
+}
+.link-buttons a {
+	margin: 5px;
+}
+
 .component-game-box {
 	display: flex;
 	margin: 10px;
@@ -67,4 +78,10 @@
 }
 .component-game-box {
 	flex: 3;
+}
+
+@media (max-width: 992px) {
+	.component-game-structure {
+		flex-direction: column;
+	}
 }
